# antminer-chip-tuner

./: .gitignore  .gitleaks.toml  AUTHORS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  NOTICE  PRIVACY.md  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  pyproject.toml  tuner-start.bat  tuner.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  hardware_validation.yml
.github/workflows/: ci.yml  codeql.yml
Independent-research-main/: README.md
Independent-research-main/Independent-research-main/: Tuning Methods.rtf  commands.py  config.py  ipscanner.py  main.py  modes.py  tcp_connect.py
docs/: provenance.md  support-matrix.md
docs/bixbit/: quickref.md
docs/braiins/: quickref.md
docs/epic/: quickref.md
docs/luxos/: quickref.md
docs/whatsminer/: quickref.md
tests/: conftest.py
tests/fixtures/: whatsminer_auth_vectors.json  whatsminer_auth_vectors_generate.sh
tests/integration/: __init__.py  test_bulk_legacy_miner_ips.py  test_http_routes_mac.py  test_mac_discovery_e2e.py  test_metrics_endpoint.py  test_route_auth.py  test_route_bulk.py  test_route_bulk_actions.py  test_route_bulk_remove.py  test_route_config.py  test_route_config_miner_firmware_recreate.py  test_route_control.py  test_route_minerstat.py  test_route_status.py  test_scanner_routes.py  test_whatsminer_live.py
tests/unit/: test_apply_whatsminer_settle.py  test_audit_greps.py  test_auth_lockout.py  test_auth_passwords.py  test_auth_sessions.py  test_bixbit_miner_api.py  test_bootstrap_safety.py  test_braiins_miner_api.py  test_braiins_phases.py  test_bulk_frontend_diagnostics.py  test_bulk_frontend_filter.py  test_bulk_logging.py  test_capability_flags.py  test_chip_tune_fallback.py  test_chip_tune_loop_polish.py  test_column_filter_audit.py  test_config_bounds_loosened.py  test_config_firmware_type.py  test_config_persistence.py  test_config_validation.py  test_config_visibility_per_platform.py  test_dashboard_output_encoding.py  test_effective_config.py  test_effective_config_v4.py  test_engine_auto_rekey_synth.py  test_engine_init_vendor.py  test_engine_persistence_paths.py  test_engine_vendor_routing.py  test_epic_summary_model.py  test_epic_summary_network.py  test_handler_connection_aborted.py  test_hardware_topology.py  test_http_request_framing.py  test_http_security.py  test_load_config_password_migration.py  test_logging_levels.py  test_luxos_miner_api.py  test_luxos_transport.py  test_mac_normalization.py  test_mac_resolve.py  (+52 more)
tuner_app/: __init__.py  __main__.py  constants.py  logging_config.py  main.py  privacy.py  state.py
tuner_app/auth/: __init__.py  lockout.py  passwords.py  sessions.py
tuner_app/config/: __init__.py  defaults.py  effective.py  persistence.py  schema.py  validation.py
tuner_app/http_server/: __init__.py  auth_helpers.py  handler.py  routes.py  server.py
(+79 files in other folders)
